//===----------------------------------------------------------------------===//
// ActorEdge serialization manifest
//===----------------------------------------------------------------------===//

syntax = "proto3";

option optimize_for = SPEED;
option swift_prefix = "ActorEdge";

// Serialization manifest - describes how payload was serialized
message Manifest {
    string serializer_id = 1;      // Serializer identifier
    string type_hint = 2;          // Type hint for deserialization
    string version = 3;            // Schema version
    map<string, string> attributes = 4; // Custom attributes
}